--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,79 +1,83 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="info-container text-center">
 
-<%= form_for(resource,
-             as: resource_name,
-             url: registration_path(resource_name),
-             html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <%# Add the page-title class to the h2 tag %>
+  <h2 class="page-title">Edit Profile</h2>
 
-  <!-- Custom fields -->
-  <div class="field edit-field">
-    <%= f.label :full_name %><br />
-    <%= f.text_field :full_name, autofocus: true %>
-  </div>
+  <%= form_for(resource,
+               as: resource_name,
+               url: registration_path(resource_name),
+               html: { method: :put, class: "edit-form" }) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field edit-field">
-    <%= f.label :phone %><br />
-    <%= f.telephone_field :phone %>
-  </div>
+    <div class="field edit-field">
+      <%= f.label :full_name %><br/>
+      <%= f.text_field :full_name, autofocus: true %>
+    </div>
 
-  <div class="field edit-field">
-    <%= f.label :location %><br />
-    <%= f.text_field :location %>
-  </div>
+    <div class="field edit-field">
+      <%= f.label :phone %><br/>
+      <%= f.telephone_field :phone %>
+    </div>
 
-  <div class="field edit-field">
-    <%= f.label :linkedin_url %><br />
-    <%= f.url_field :linkedin_url %>
-  </div>
+    <div class="field edit-field">
+      <%= f.label :location %><br/>
+      <%= f.text_field :location %>
+    </div>
 
-  <div class="field edit-field">
-    <%= f.label :resume_url %><br />
-    <%= f.url_field :resume_url %>
-  </div>
+    <div class="field edit-field">
+      <%= f.label :linkedin_url %><br/>
+      <%= f.url_field :linkedin_url %>
+    </div>
 
-  <!-- Default Devise fields -->
-  <div class="field edit-field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autocomplete: "email" %>
-  </div>
+    <div class="field edit-field">
+      <%= f.label :resume_url %><br/>
+      <%= f.url_field :resume_url %>
+    </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+    <div class="field edit-field">
+      <%= f.label :profile_photo %><br>
+      <%= f.file_field :profile_photo, accept: "image/png,image/jpeg" %>
 
-  <div class="field edit-field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+      <div class="mt-2">
+        <% if resource.profile_photo.attached? && resource.profile_photo.persisted? %>
+          <%= image_tag resource.profile_photo, class: "rounded-circle shadow", width: 150, height: 150 %>
+        <% else %>
+          <%= image_tag "default-avatar.png", class: "rounded-circle shadow", width: 150, height: 150 %>
+        <% end %>
+      </div>
+    </div>
+
+    <div class="field edit-field">
+      <%= f.label :email %><br/>
+      <%= f.email_field :email, autocomplete: "email" %>
+    </div>
+
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
     <% end %>
-  </div>
 
-  <div class="field edit-field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <div class="field edit-field">
+      <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br/>
+      <%= f.password_field :password, autocomplete: "new-password" %>
+      <% if @minimum_password_length %>
+        <br/>
+        <em><%= @minimum_password_length %> characters minimum</em>
+      <% end %>
+    </div>
 
-  <div class="field edit-field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
+    <div class="field edit-field">
+      <%= f.label :password_confirmation %><br/>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
+    <div class="field edit-field">
+      <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br/>
+      <%= f.password_field :current_password, autocomplete: "current-password" %>
+    </div>
 
-<h3>Cancel my account</h3>
-
-<div>
-  Unhappy?
-  <%= button_to "Cancel my account",
-                registration_path(resource_name),
-                data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" },
-                method: :delete %>
+    <div class="info-buttons">
+      <%= f.submit "Update", class: "btn btn-primary w-100" %>
+      <%= link_to "Back", personal_info_path, class: "btn btn-secondary w-100" %>
+    </div>
+  <% end %>
 </div>
-
-<%= link_to "Back", personal_info_path, class: "btn btn-secondary" %>
