--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -7,21 +7,12 @@
   <hr>
 
   <div class="mb-3" data-controller="job-search">
-    <div class="input-group">
-      <input
-        type="text"
-        data-job-search-target="input"
-        class="form-control"
-        placeholder="Search jobs by title or company..."
-      >
-      <button
-        type="button"
-        data-action="click->job-search#search"
-        class="btn btn-primary"
-      >
-        Search
-      </button>
-    </div>
+    <%= form_with url: jobs_path, method: :get, local: true, html: { class: 'd-flex' } do |f| %>
+      <div class="input-group w-100">
+        <%= f.text_field :q, value: params[:q], placeholder: 'Search jobs by title or company...', class: 'form-control', data: { 'job-search-target': 'input' } %>
+        <%= f.submit 'Search', class: 'btn btn-primary', data: { action: 'job-search#search' } %>
+      </div>
+    <% end %>
   </div>
 
   <% if @jobs.any? %>
